# unibrain

./: .gitignore  README.md  config.py  database.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  requirements.txt  test_chunk_effect.md
routers/: api.py
services/: cache_service.py  document_service.py  history_service.py  qa_service.py  reranker_service.py
static/: app.js  index.html  style.css
test/: test_chunking_logic.py  test_db.py  test_hybrid_retrieval_unit.py  test_multi_query_unit.py  test_query_rewrite_integration.py  test_query_rewrite_unit.py  test_reranker_unit.py  test_zhipu.py
