[project]
name = "unibrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=8.19.3",
    "fastapi>=0.135.3",
    "greenlet>=3.0.0",
    "httpx>=0.27.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-elasticsearch>=1.0.0",
    "langchain-openai>=1.1.13",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "psycopg>=3.3.3",
    "psycopg-pool>=3.3.0",
    "pypdf>=6.10.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.30",
    "uvicorn>=0.44.0",
    "zhipuai>=2.1.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
